bo sung them don xuat khau voi output.css

--- a/Oceanation-main/Oceanation-main/login_handle/src/log_in.html
+++ b/Oceanation-main/Oceanation-main/login_handle/src/log_in.html
@@ -16,8 +16,7 @@
       
         <div class="sm:w-1/2 px-5">
           
-            <h2 class="font-bold text-2xl text-center
-            text-gray-700">Log in</h2>
+            <h2 class="font-bold text-2xl text-center text-gray-700">Log in</h2>
             <form id="loginForm"
             class="flex flex-col gap-2">
                 <label for="email" class="test-sm mt-6 text-gray-">User name:</label>
