chinh cai khung nam chinh giua

--- a/Oceanation-main/Oceanation-main/login_handle/src/exportation_form.html
+++ b/Oceanation-main/Oceanation-main/login_handle/src/exportation_form.html
@@ -27,7 +27,7 @@
 
   <!-- container class -->
   <div class="containers">
-    <h2><p>Sea Exportation Application Form</p></h2>
+    <h2><b>Sea Exportation Application Form</b></h2>
     <p><b>Exporter</b></p>
     <form action="/submit" method="post" class="items-center">
         <div class="form-group" style="display:flex; justify-content: space-between;">
