--- a/Oceanation-main/Oceanation-main/login_handle/src/welcome.html
+++ b/Oceanation-main/Oceanation-main/login_handle/src/welcome.html
@@ -21,9 +21,8 @@
             <a href="log_in.html" class="text-white hover:text-gray-200 space-x-32">Log in</a>
         </div>
     </nav> 
-    <section class="relative min-h-screen flex  " style="background-image: url('/login_handle/img/bg-welcome.jpg'); background-size: cover; background-position: center;">
-        <div class="absolute inset-0 bg-gray-800 bg-opacity-50"></div>  
-        <div class="relative w-full text-center absolute inset-0 bg-gray-800 bg-opacity-50">
+    <section class="relative min-h-screen flex items-center " style="background-image: url('/login_handle/img/bg1.jpg'); background-size: cover; background-position: center;">
+        <div class="relative w-full text-center absolute inset-0 bg-cyan-800 bg-opacity-50">
             <div class="flex justify-center">   
                 <h1 class="font-bold font-mono text-6xl text-white ">Welcome! </h1>
                 <a href="log_in.html" class="font-bold font-mono text-6xl text-white mx-6 hover-change"> Log in </a>
