--- a/Oceanation-main/Oceanation-main/login_handle/src/log_in.html
+++ b/Oceanation-main/Oceanation-main/login_handle/src/log_in.html
@@ -9,27 +9,27 @@
 <title>Oceanation-Log in</title>
 </head>
 <body>
-<section class="bg-gray-50 min-h-screen flex item-center justify-center ">
-    <div class="items-center bg-gradient-to-r from-gray-200 to-blue-500 rounded-2xl shadow-lg max-w-3xl p-5">
+<section class="bg-gray-50 min-h-screen flex item-center justify-center" style="background-image: url('/login_handle/img/sea3.jpg'); background-size: cover; background-position: center; " >
+    <div class="items-center bg-gray-500 rounded-2xl bg-opacity-50 shadow-lg max-w-3xl w-1/2 p-5">
         <img src="/login_handle/img/logo.png" class="mr-2 mb-4">
     <div class="items-center flex rounded-2xl max-w-3xl p-5 ">
       
         <div class="sm:w-1/2 px-5">
           
-            <h2 class="font-bold text-2xl text-center text-gray-700">Log in</h2>
+            <h2 class="font-bold text-4xl text-center text-black">Log in</h2>
             <form id="loginForm"
             class="flex flex-col gap-2">
-                <label for="email" class="test-sm mt-6 text-gray-">User name:</label>
+                <label for="email" class="test-sm mt-6 text-white">User name:</label>
                 <input id="email" class="p-4 border w-full border-gray-500 rounded-xl" onkeypress="checkEnter(event)"
                 type="text" name="email" placeholder="Email">
-                <label for="password" class="test-sm mt-4 text-gray-700">Password:</label>
+                <label for="password" class="test-sm mt-4 text-white">Password:</label>
                 <input id="password" class="p-4 rounded-xl border-gray-500 border" onkeypress="checkEnter(event)"
                 type="password" name="password" placeholder="Password">
                 <button type="button" onclick="login()" class="mt-4 bg-gray-800 rounded-xl text-white py-4 w-fit" >Log in</button>
             </form>
         </div>
         <div class="relative w-1/2 ml-4" >
-            <img class="rounded-2xl shadow-lg" src="/login_handle/img/bg-welcome (1).jpg">
+            <img class="rounded-2xl shadow-lg w-2/5" src="/login_handle/img/account3.png">
         </div>
     </div>
 </div>
