--- a/Oceanation-main/Oceanation-main/login_handle/src/exportation_form.html
+++ b/Oceanation-main/Oceanation-main/login_handle/src/exportation_form.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/login_handle/css/output.css" rel="stylesheet">
+  <link href="/Oceanation-main/Oceanation-main/login_handle/css/output.css" rel="stylesheet">
 <title>Oceanation-Exportation Form</title>
-<link rel="icon" href="/login_handle/img/logo.png" type = "image/png">
+<link rel="icon" href="/Oceanation-main/Oceanation-main/login_handle/img/logo.png" type = "image/png">
 </head>
 <style>
   .bg-form {
-      background-image: url('/login_handle/img/4.jpg');
+      background-image: url('/Oceanation-main/Oceanation-main/login_handle/img/4.jpg');
       background-size: cover;
       background-repeat: no-repeat;
   }
@@ -18,7 +18,7 @@
   <!-- navigation at the top of page -->
   <nav class="bg-gradient-to-r from-gray-500 to-blue-500 flex ">
     <div class="flex justify-between items-center">
-        <img src="/login_handle/img/logo.png" class="mr-2">
+        <img src="/Oceanation-main/Oceanation-main/login_handle/img/logo.png" class="mr-2">
         <a href="welcome.html" class="text-white hover:text-gray-200 space-x-16">Home</a>
         <a href="#" class="text-white hover:text-gray-200 space-x-32">Services</a>
         <a href="#" class="text-white hover:text-gray-200 space-x-32 p-4">About us</a>
