--- a/Oceanation-main/Oceanation-main/login_handle/src/sign_up.html
+++ b/Oceanation-main/Oceanation-main/login_handle/src/sign_up.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/login_handle/css/output.css" rel="stylesheet">
-  <link rel="icon" href="/login_handle/img/logo.png" type = "image/png">
+  <link href="/Oceanation-main/Oceanation-main/login_handle/css/output.css" rel="stylesheet">
+  <link rel="icon" href="/Oceanation-main/Oceanation-main/login_handle/img/logo.png" type = "image/png">
 <title>Oceanation-Sign up</title>
 </head>
 <body>
-<section class="bg-gray-50 min-h-screen flex item-center justify-center ">
-    <div class="items-center bg-gradient-to-r from-gray-200 to-blue-500 rounded-2xl shadow-lg max-w-3xl p-5">
-        <img src="/login_handle/img/logo.png" class="mr-2 mb-4">
+<section class="bg-gray-50 min-h-screen flex item-center justify-center " style="background-image: url('/Oceanation-main/Oceanation-main/login_handle/img/sea3.jpg'); background-size: cover; background-position: center; ">
+    <div class="items-center  bg-gray-500 bg-opacity-50 rounded-2xl shadow-lg max-w-3xl p-5">
+        <img src="/Oceanation-main/Oceanation-main/login_handle/img/logo.png" class="mr-2 mb-4">
     <div class="items-center flex rounded-2xl max-w-3xl p-5 ">
       
         <div class="sm:w-1/2 px-5">
@@ -33,7 +33,7 @@
             </form>
         </div>
         <div class="relative w-1/2 ml-4" >
-            <img class="rounded-2xl shadow-lg" src="/login_handle/img/bg-welcome (1).jpg">
+            <img class="rounded-2xl shadow-lg" src="/Oceanation-main/Oceanation-main/login_handle/img/bg-welcome (1).jpg">
         </div>
     </div>
 </div>
