--- a/Oceanation-main/Oceanation-main/login_handle/src/welcome.html
+++ b/Oceanation-main/Oceanation-main/login_handle/src/welcome.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/login_handle/css/output.css" rel="stylesheet">
+  <link href="/Oceanation-main/Oceanation-main/login_handle/css/output.css" rel="stylesheet">
 <title>Oceanation-Welcome</title>
-<link rel="icon" href="/login_handle/img/logo.png" type = "image/png">
+<link rel="icon" href="/Oceanation-main/Oceanation-main/login_handle/img/logo.png" type = "image/png">
 </head>
 <body>
     <nav class="bg-gradient-to-r from-gray-500 to-blue-500 flex ">
         
         <div class="flex justify-between items-center">
-            <img src="/login_handle/img/logo.png" class="mr-2">
+            <img src="/Oceanation-main/Oceanation-main/login_handle/img/logo.png" class="mr-2">
             <a href="welcome.html" class="text-white hover:text-gray-200 space-x-16">Home</a>
             <a href="#" class="text-white hover:text-gray-200 space-x-32">Services</a>
             <a href="#" class="text-white hover:text-gray-200 space-x-32 p-4">About us</a>
@@ -21,7 +21,7 @@
             <a href="log_in.html" class="text-white hover:text-gray-200 space-x-32">Log in</a>
         </div>
     </nav> 
-    <section class="relative min-h-screen flex items-center " style="background-image: url('/login_handle/img/bg1.jpg'); background-size: cover; background-position: center;">
+    <section class="relative min-h-screen flex items-center " style="background-image: url('/Oceanation-main/Oceanation-main/login_handle/img/bg1.jpg'); background-size: cover; background-position: center;">
         <div class="relative w-full text-center absolute inset-0 bg-cyan-800 bg-opacity-50">
             <div class="flex justify-center">   
                 <h1 class="font-bold font-mono text-6xl text-white ">Welcome! </h1>
@@ -30,9 +30,9 @@
             </div>
             <div class="flex justify-center">
                 <h2 class="font-bold font-mono text-4xl text-white mr-4">Don't have account?</h2>
-                <a href="sign_up.html" class="font- font-mono text-4xl text-white font-bold hover-change"> Sign up </a>
+                <a href="sign_up.html" class="font-bold font-mono text-4xl text-white font-bold hover-change"> Sign up </a>
             </div>
-        </div>
+       </div>
       </section>
 
     
